# Face_NCNN

./: .gitignore  CMakeLists.txt  README.md
src/: anchor_generator.cpp  config.cpp  config.h  face_alignment.cpp  face_alignment.h  face_detector.cpp  face_detector.h  face_extractor.cpp  face_extractor.h  main.cpp  types.h
weights/: settings.json
